PBG01-100 CU04 - IT2 - IMP - Implement Components #done #time 8h 11m

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,22 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+        <activity
+            android:name=".activities.ItemDetailActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
+            android:name=".activities.DeleteAccountActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
     </application>
 
 </manifest>
