--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -46,6 +46,14 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".activities.AppInfoActivity"
+            android:exported="false"
+            android:screenOrientation="nosensor">
+            <meta-data
+                android:name="android.app.lib_name"
+                android:value="" />
+        </activity>
+        <activity
             android:name=".activities.ItemDetailActivity"
             android:exported="false"
             android:screenOrientation="nosensor">
