--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,4 +63,6 @@ dependencies {
     testImplementation 'androidx.test.ext:junit-ktx:1.1.4'
     testImplementation 'org.robolectric:robolectric:4.4'
     testImplementation("com.squareup.okhttp3:mockwebserver:4.2.1")
+    //Espresso
+    androidTestImplementation 'androidx.test.espresso:espresso-contrib:3.5.0'
 }
